--- a/platform/research/compose.yaml
+++ b/platform/research/compose.yaml
@@ -10,8 +10,14 @@ services:
       # - searxng-data:/var/cache/searxng:rw
     environment:
       - SEARXNG_BASE_URL=https://${SEARXNG_HOSTNAME:-localhost}/
+    networks:
+      - proxy
     logging:
       driver: "json-file"
       options:
         max-size: "1m"
         max-file: "1"
+
+networks:
+  proxy:
+    external: true
