--- a/platform/media/compose.yaml
+++ b/platform/media/compose.yaml
@@ -24,14 +24,14 @@ services:
   qbittorrent:
     image: lscr.io/linuxserver/qbittorrent:latest
     container_name: qbittorrent
-    network_mode: "service:gluetun"  # <-- key line (shares gluetun network namespace)
+    network_mode: "service:gluetun"
     depends_on:
       - gluetun
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=America/New_York
-      - WEBUI_PORT=8080
+      - WEBUI_PORT=8088
     volumes:
       - ./config/qbittorrent:/config
       - /mnt/downloads:/downloads
