--- a/platform/downloads/compose.yaml
+++ b/platform/downloads/compose.yaml
@@ -4,9 +4,12 @@ services:
     container_name: gluetun
     cap_add:
       - NET_ADMIN
+    devices:
+      - /dev/net/tun:/dev/net/tun
+    # privileged: true
     networks:
       downloads:
-        ipv4_address: 10.0.40.10
+        ipv4_address: ${DOWNLOADS_IP}
     environment:
       - TZ=America/New_York
       - VPN_SERVICE_PROVIDER=${VPN_SERVICE_PROVIDER}
@@ -14,7 +17,6 @@ services:
       - WIREGUARD_PRIVATE_KEY=${WIREGUARD_PRIVATE_KEY}
       - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES}
       - WIREGUARD_ENDPOINT_IP=${WIREGUARD_ENDPOINT_IP}
-      - WIREGUARD_ENDPOINT_PORT=${WIREGUARD_ENDPOINT_PORT:-51820}
       - WIREGUARD_PUBLIC_KEY=${WIREGUARD_PUBLIC_KEY}
       - VPN_PORT_FORWARDING=${VPN_PORT_FORWARDING:-on}
       - VPN_PORT_FORWARDING_PROVIDER=${VPN_PORT_FORWARDING_PROVIDER:-}
