create within compose file

--- a/platform/downloads/compose.yaml
+++ b/platform/downloads/compose.yaml
@@ -48,4 +48,10 @@ services:
 
 networks:
   downloads:
-    external: true
+    driver: macvlan
+    driver_opts:
+      parent: eth1
+    ipam:
+      config:
+        - subnet: ${SUBNET_CIDR}
+          gateway: ${GATEWAY}
