--- a/containers/Taskfile.yml
+++ b/containers/Taskfile.yml
@@ -9,11 +9,12 @@ tasks:
     dir: containers
     summary: Standup lxc container with portainer for container management
     env:
-      PROXMOX_VE_USERNAME: "{{.PROXMOX_USERNAME}}"
-      PROXMOX_VE_PASSWORD: "{{.PROXMOX_PASSWORD}}"
+      PROXMOX_VE_USERNAME: "root@pam"
+      PROXMOX_VE_PASSWORD: "cosmo"
       PROXMOX_VE_ENDPOINT: "https://{{.PROXMOX_NODE_ONE_IP}}:8006"
       PROXMOX_VE_API_TOKEN: "{{.PROXMOX_NODE_ONE_API_TOKEN}}"
       PROXMOX_VE_SSH_AGENT: "false"
+      PROXMOX_VE_SSH_PUBLIC_KEY: "{{.PROXMOX_NODE_ONE_PUBLIC_KEY}}"
       PROXMOX_VE_SSH_PRIVATE_KEY: "{{.PROXMOX_NODE_ONE_PRIVATE_KEY}}"
       WIREGUARD_PUBLIC_KEY: "{{ .WIREGUARD_PUBLIC_KEY }}"
       WIREGUARD_PRIVATE_KEY: "{{ .WIREGUARD_PRIVATE_KEY }}"
@@ -23,8 +24,8 @@ tasks:
       - |-
         {{.TERRAFORM}} plan \
           -var proxmox_server_ip=$PROXMOX_NODE_ONE_IP \
-          -var proxmox_ssh_public_key=$PROXMOX_NODE_ONE_PUBLIC_KEY \
-          -var proxmox_ssh_private_key=$PROXMOX_NODE_ONE_PRIVATE_KEY \
+          -var proxmox_ssh_public_key=$PROXMOX_VE_SSH_PUBLIC_KEY \
+          -var proxmox_ssh_private_key=$PROXMOX_VE_SSH_PRIVATE_KEY \
           -var portainer_ip=$PORTAINER_IP \
           -var network_gateway=$PROXMOX_NETWORK_GATEWAY \
           -var portainer_password=$PORTAINER_PASSWORD \
@@ -57,7 +58,6 @@ tasks:
       PROXMOX_VE_USERNAME: "{{.PROXMOX_USERNAME}}"
       PROXMOX_VE_PASSWORD: "{{.PROXMOX_PASSWORD}}"
       PROXMOX_VE_ENDPOINT: "https://{{.PROXMOX_NODE_ONE_IP}}:8006"
-      PROXMOX_VE_API_TOKEN: "{{.PROXMOX_NODE_ONE_API_TOKEN}}"
       PROXMOX_VE_SSH_AGENT: "false"
       PROXMOX_VE_SSH_PRIVATE_KEY: "{{.PROXMOX_NODE_ONE_PRIVATE_KEY}}"
       WIREGUARD_PUBLIC_KEY: "{{ .WIREGUARD_PUBLIC_KEY }}"
