--- a/platform/downloads/compose.yaml
+++ b/platform/downloads/compose.yaml
@@ -6,24 +6,22 @@ services:
       - NET_ADMIN
     devices:
       - /dev/net/tun:/dev/net/tun
-    # privileged: true
     networks:
       downloads:
         ipv4_address: ${DOWNLOADS_IP}
+    sysctls:
+      net.ipv6.conf.all.disable_ipv6: 1
+      net.ipv6.conf.default.disable_ipv6: 1
     environment:
-      - TZ=America/New_York
-      - VPN_SERVICE_PROVIDER=${VPN_SERVICE_PROVIDER}
-      - VPN_TYPE=wireguard
-      - WIREGUARD_PRIVATE_KEY=${WIREGUARD_PRIVATE_KEY}
-      - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES}
-      - WIREGUARD_ENDPOINT_IP=${WIREGUARD_ENDPOINT_IP}
-      - WIREGUARD_PUBLIC_KEY=${WIREGUARD_PUBLIC_KEY}
-      - VPN_PORT_FORWARDING=${VPN_PORT_FORWARDING:-on}
-      - VPN_PORT_FORWARDING_PROVIDER=${VPN_PORT_FORWARDING_PROVIDER:-}
-    ports:
-      - "8080:8080"
-      - "6881:6881"
-      - "6881:6881/udp"
+      TZ: America/New_York
+      VPN_SERVICE_PROVIDER: ${VPN_SERVICE_PROVIDER}
+      VPN_TYPE: wireguard
+      WIREGUARD_PRIVATE_KEY: ${WIREGUARD_PRIVATE_KEY}
+      SERVER_COUNTRIES: ${SERVER_COUNTRIES}
+      FREE_ONLY: ${FREE_ONLY:-on}
+      VPN_IPV6_DISABLED: ${VPN_IPV6_DISABLED:-on}
+      DOT: ${DOT:-on}
+      DNS_KEEP_NAMESERVER: ${DNS_KEEP_NAMESERVER:-on}
     restart: unless-stopped
     # labels:
     #   - "traefik.enable=true"
@@ -35,7 +33,8 @@ services:
     container_name: qbittorrent
     network_mode: "service:gluetun"
     depends_on:
-      - gluetun
+      gluetun:
+        condition: service_healthy
     environment:
       - PUID=1000
       - PGID=1000
