--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -8,12 +8,15 @@ includes:
     taskfile: kubernetes/Taskfile.yml
   containers:
     taskfile: containers/Taskfile.yml
+  network:
+    taskfile: rack/network/Taskfile.yml
   platform:
     taskfile: platform/Taskfile.yml
-  docs:
-    taskfile: docs/Taskfile.yml
 
-dotenv: ['./kubernetes/.env']
+dotenv: [
+  './kubernetes/.env',
+  './containers/.env'
+]
 
 tasks:
   help:
