--- a/containers/Taskfile.yml
+++ b/containers/Taskfile.yml
@@ -9,23 +9,33 @@ tasks:
     dir: containers
     summary: Standup lxc container with portainer for container management
     env:
-      PROXMOX_VE_USERNAME: "{{.PROXMOX_USERNAME}}"
-      PROXMOX_VE_PASSWORD: "{{.PROXMOX_PASSWORD}}"
+      PROXMOX_VE_USERNAME: "root@pam"
+      PROXMOX_VE_PASSWORD: "cosmo"
       PROXMOX_VE_ENDPOINT: "https://{{.PROXMOX_NODE_ONE_IP}}:8006"
       PROXMOX_VE_API_TOKEN: "{{.PROXMOX_NODE_ONE_API_TOKEN}}"
       PROXMOX_VE_SSH_AGENT: "false"
+      PROXMOX_VE_SSH_PUBLIC_KEY: "{{.PROXMOX_NODE_ONE_PUBLIC_KEY}}"
       PROXMOX_VE_SSH_PRIVATE_KEY: "{{.PROXMOX_NODE_ONE_PRIVATE_KEY}}"
+      WIREGUARD_PUBLIC_KEY: "{{ .WIREGUARD_PUBLIC_KEY }}"
+      WIREGUARD_PRIVATE_KEY: "{{ .WIREGUARD_PRIVATE_KEY }}"
     cmds:
       - |-
         {{.TERRAFORM}} init --upgrade
       - |-
         {{.TERRAFORM}} plan \
           -var proxmox_server_ip=$PROXMOX_NODE_ONE_IP \
-          -var proxmox_ssh_public_key=$PROXMOX_NODE_ONE_PUBLIC_KEY \
-          -var proxmox_ssh_private_key=$PROXMOX_NODE_ONE_PRIVATE_KEY \
+          -var proxmox_ssh_public_key=$PROXMOX_VE_SSH_PUBLIC_KEY \
+          -var proxmox_ssh_private_key=$PROXMOX_VE_SSH_PRIVATE_KEY \
           -var portainer_ip=$PORTAINER_IP \
           -var network_gateway=$PROXMOX_NETWORK_GATEWAY \
-          -var portainer_password=$PORTAINER_PASSWORD
+          -var portainer_password=$PORTAINER_PASSWORD \
+          -var wireguard_private_key=$WIREGUARD_PRIVATE_KEY \
+          -var wireguard_public_key=$WIREGUARD_PUBLIC_KEY \
+          -var wireguard_addresses=$WIREGUARD_ADDRESSES \
+          -var wireguard_endpoint_ip=$WIREGUARD_ENDPOINT_IP \
+          -var wireguard_endpoint_port=$WIREGUARD_ENDPOINT_PORT \
+          -var vpn_port_forwarding=$VPN_PORT_FORWARDING \
+          -var vpn_port_forwarding_provider=$VPN_PORT_FORWARDING_PROVIDER
       - |-
         {{.TERRAFORM}} apply -auto-approve \
           -var proxmox_server_ip=$PROXMOX_NODE_ONE_IP \
@@ -33,10 +43,25 @@ tasks:
           -var proxmox_ssh_private_key=$PROXMOX_NODE_ONE_PRIVATE_KEY \
           -var portainer_ip=$PORTAINER_IP \
           -var network_gateway=$PROXMOX_NETWORK_GATEWAY \
-          -var portainer_password=$PORTAINER_PASSWORD
+          -var portainer_password=$PORTAINER_PASSWORD \
+          -var wireguard_private_key=$WIREGUARD_PRIVATE_KEY \
+          -var wireguard_public_key=$WIREGUARD_PUBLIC_KEY \
+          -var wireguard_addresses=$WIREGUARD_ADDRESSES \
+          -var wireguard_endpoint_ip=$WIREGUARD_ENDPOINT_IP \
+          -var wireguard_endpoint_port=$WIREGUARD_ENDPOINT_PORT \
+          -var vpn_port_forwarding=$VPN_PORT_FORWARDING \
+          -var vpn_port_forwarding_provider=$VPN_PORT_FORWARDING_PROVIDER
 
   destroy:
-    dir: terraform
+    dir: containers
+    env:
+      PROXMOX_VE_USERNAME: "{{.PROXMOX_USERNAME}}"
+      PROXMOX_VE_PASSWORD: "{{.PROXMOX_PASSWORD}}"
+      PROXMOX_VE_ENDPOINT: "https://{{.PROXMOX_NODE_ONE_IP}}:8006"
+      PROXMOX_VE_SSH_AGENT: "false"
+      PROXMOX_VE_SSH_PRIVATE_KEY: "{{.PROXMOX_NODE_ONE_PRIVATE_KEY}}"
+      WIREGUARD_PUBLIC_KEY: "{{ .WIREGUARD_PUBLIC_KEY }}"
+      WIREGUARD_PRIVATE_KEY: "{{ .WIREGUARD_PRIVATE_KEY }}"
     cmds:
       - |-
         {{.TERRAFORM}} destroy -auto-approve \
@@ -44,4 +69,11 @@ tasks:
           -var proxmox_ssh_private_key=$PROXMOX_NODE_ONE_PRIVATE_KEY \
           -var portainer_ip=$PORTAINER_IP \
           -var network_gateway=$PROXMOX_NETWORK_GATEWAY \
-          -var portainer_password=$PORTAINER_PASSWORD
+          -var portainer_password=$PORTAINER_PASSWORD \
+          -var wireguard_private_key=$WIREGUARD_PRIVATE_KEY \
+          -var wireguard_public_key=$WIREGUARD_PUBLIC_KEY \
+          -var wireguard_addresses=$WIREGUARD_ADDRESSES \
+          -var wireguard_endpoint_ip=$WIREGUARD_ENDPOINT_IP \
+          -var wireguard_endpoint_port=$WIREGUARD_ENDPOINT_PORT \
+          -var vpn_port_forwarding=$VPN_PORT_FORWARDING \
+          -var vpn_port_forwarding_provider=$VPN_PORT_FORWARDING_PROVIDER
